# tachibk-converter

./: .gitignore  README.md  __init__.py  backup_diff.py  category_filter.py  count_cleaned_output.json_.py  delete_all_otheres_which_have_the_watched_category_of_my.py  duplicate_eraser.py  extract_R18.sh  extract_titles_and_folders.py  flake.nix  json_to_tachibk.py  manga_finder.py  move_category.py  pyproject.toml  requirements.txt  source_replace.py  tachibk-converter.py  tachibk-creater.py  tachibk_converter.py
.github/: renovate.json5
manga/: all.json  emoji.txt
manga/proto/: schema.proto  schema_pb2.py  schema_pb2.pyi
